--- a/config_files/vs_code_settings.json
+++ b/config_files/vs_code_settings.json
@@ -26,19 +26,43 @@
     "statusBar.background": "#151515",
     "statusBar.debuggingBackground": "#263238",
     "statusBar.noFolderBackground": "#171717",
-    "statusBar.border": "#78A2CC"
+    "statusBar.border": "#78A2CC",
+
+    // Terminal
+    "terminal.background":"#282936",
+    "terminal.foreground":"#E9E9F4",
+    "terminalCursor.background":"#E9E9F4",
+    "terminalCursor.foreground":"#E9E9F4",
+    "terminal.ansiBlack":"#282936",
+    "terminal.ansiBlue":"#62D6E8",
+    "terminal.ansiBrightBlack":"#626483",
+    "terminal.ansiBrightBlue":"#62D6E8",
+    "terminal.ansiBrightCyan":"#A1EFE4",
+    "terminal.ansiBrightGreen":"#EBFF87",
+    "terminal.ansiBrightMagenta":"#B45BCF",
+    "terminal.ansiBrightRed":"#EA51B2",
+    "terminal.ansiBrightWhite":"#F7F7FB",
+    "terminal.ansiBrightYellow":"#00F769",
+    "terminal.ansiCyan":"#A1EFE4",
+    "terminal.ansiGreen":"#EBFF87",
+    "terminal.ansiMagenta":"#B45BCF",
+    "terminal.ansiRed":"#EA51B2",
+    "terminal.ansiWhite":"#E9E9F4",
+    "terminal.ansiYellow":"#00F769"
   },
   "window.titleBarStyle": "custom",
   "editor.fontSize": 15,
+  "editor.fontLigatures": true,
   "python.formatting.provider": "black",
   "workbench.preferredDarkColorTheme": "Atom One Dark",
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter",
-    "editor.tabSize": 4
+    "editor.tabSize": 4,
+    "editor.formatOnType": true
   },
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.tabSize": 2
+    "editor.tabSize": 4
   },
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -46,7 +70,7 @@
   "[css]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "editor.fontFamily": "'Droid Sans Mono', 'monospace', MesloLGS NF",
+  "editor.fontFamily": "'Fira Code', 'MesloLGS NF',  'Droid Sans Mono', 'monospace'",
   "security.workspace.trust.untrustedFiles": "open",
   "editor.formatOnSave": true,
   // put this in your settings object
@@ -106,6 +130,12 @@
       "text": "TODO",
       "color": "#333",
       "backgroundColor": "#2ecc71"
-    },
-  ]
+    }
+  ],
+  "workbench.colorTheme": "Mariana Pro (Cool)",
+  "git.enableSmartCommit": true,
+  "git.confirmSync": false,
+  "redhat.telemetry.enabled": false,
+  "liveServer.settings.CustomBrowser": "firefox",
+  "editor.insertSpaces": false,
 }
