--- a/config_files/vs_code_settings.json
+++ b/config_files/vs_code_settings.json
@@ -29,29 +29,30 @@
     "statusBar.border": "#78A2CC",
 
     // Terminal
-    "terminal.background":"#282936",
-    "terminal.foreground":"#E9E9F4",
-    "terminalCursor.background":"#E9E9F4",
-    "terminalCursor.foreground":"#E9E9F4",
-    "terminal.ansiBlack":"#282936",
-    "terminal.ansiBlue":"#62D6E8",
-    "terminal.ansiBrightBlack":"#626483",
-    "terminal.ansiBrightBlue":"#62D6E8",
-    "terminal.ansiBrightCyan":"#A1EFE4",
-    "terminal.ansiBrightGreen":"#EBFF87",
-    "terminal.ansiBrightMagenta":"#B45BCF",
-    "terminal.ansiBrightRed":"#EA51B2",
-    "terminal.ansiBrightWhite":"#F7F7FB",
-    "terminal.ansiBrightYellow":"#00F769",
-    "terminal.ansiCyan":"#A1EFE4",
-    "terminal.ansiGreen":"#EBFF87",
-    "terminal.ansiMagenta":"#B45BCF",
-    "terminal.ansiRed":"#EA51B2",
-    "terminal.ansiWhite":"#E9E9F4",
-    "terminal.ansiYellow":"#00F769"
+    "terminal.background":"#222222",
+    "terminal.foreground":"#E0E0E0",
+    "terminalCursor.background":"#E0E0E0",
+    "terminalCursor.foreground":"#E0E0E0",
+    "terminal.ansiBlack":"#000000",
+    "terminal.ansiBlue":"#6FB3D2",
+    "terminal.ansiBrightBlack":"#B0B0B0",
+    "terminal.ansiBrightBlue":"#6FB3D2",
+    "terminal.ansiBrightCyan":"#76C7B7",
+    "terminal.ansiBrightGreen":"#A1C659",
+    "terminal.ansiBrightMagenta":"#D381C3",
+    "terminal.ansiBrightRed":"#FB0120",
+    "terminal.ansiBrightWhite":"#FFFFFF",
+    "terminal.ansiBrightYellow":"#FDA331",
+    "terminal.ansiCyan":"#76C7B7",
+    "terminal.ansiGreen":"#A1C659",
+    "terminal.ansiMagenta":"#D381C3",
+    "terminal.ansiRed":"#FB0120",
+    "terminal.ansiWhite":"#E0E0E0",
+    "terminal.ansiYellow":"#FDA331"
   },
   "window.titleBarStyle": "custom",
   "editor.fontSize": 15,
+  "terminal.integrated.fontSize": 14,
   "editor.fontLigatures": true,
   "python.formatting.provider": "black",
   "workbench.preferredDarkColorTheme": "Atom One Dark",
