--- a/config_files/.tmux.conf
+++ b/config_files/.tmux.conf
@@ -46,3 +46,13 @@ set -g pane-active-border-style 'bg=colour0 fg=#FFA500'
 # enable wm window titles
 set -g set-titles on
 set -g set-titles-string "tmux.#I.#W"
+
+
+# set color for status bar
+set-option -g status-style bg=default,fg=white
+
+# set window title list colors
+set-window-option -g window-status-style fg=brightred,bg=default
+
+# active window title colors
+set-window-option -g window-status-current-style fg=brightblue,bg="#606060"
