--- a/config_files/tmux/.tmux.conf
+++ b/config_files/tmux/.tmux.conf
@@ -74,12 +74,18 @@ bind - split-window -v
 bind _ split-window -h
 
 # pane navigation
-bind -r h select-pane -L  # move left
-bind -r j select-pane -D  # move down
-bind -r k select-pane -U  # move up
-bind -r l select-pane -R  # move right
+# pane navigation
+bind -r M-Left select-pane -L  # move left
+bind -r M-Down select-pane -D  # move down
+bind -r M-Up select-pane -U  # move up
+bind -r M-Right select-pane -R  # move right
+# bind -r h select-pane -L  # move left
+# bind -r j select-pane -D  # move down
+# bind -r k select-pane -U  # move up
+# bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
+
 
 # maximize current pane
 bind + run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D'"
