--- a/config_files/tmux/.tmux.conf
+++ b/config_files/tmux/.tmux.conf
@@ -74,10 +74,10 @@ bind - split-window -v
 bind _ split-window -h
 
 # pane navigation
-bind -r M-Left select-pane -L  # move left
-bind -r M-Down select-pane -D  # move down
-bind -r M-Up select-pane -U  # move up
-bind -r M-Right select-pane -R  # move right
+# bind -r M-Left select-pane -L  # move left
+# bind -r M-Down select-pane -D  # move down
+# bind -r M-Up select-pane -U  # move up
+# bind -r M-Right select-pane -R  # move right
 # bind -r h select-pane -L  # move left
 # bind -r j select-pane -D  # move down
 # bind -r k select-pane -U  # move up
